--- a/src/config.yaml
+++ b/src/config.yaml
@@ -2,5 +2,7 @@ alpha: 0.99
 n_days: 1000
 n_mc: 10000
 ewma_lambda: 0.94
+volatility_stress_factor: 2
+correlation_stress_factor: 0.2
 KPI_filename: "KPI.xlsx"
 dashboard_name: "electricity_risk_report.html"
